[package]
name = "cli"
edition = "2024"

[[bin]]
name = "ofcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sdk = { path = "../sdk" }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = [
  "formatting",
  "local-offset",
] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }
