[package]
name = "cli"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "ofcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
sdk = { path = "../sdk" }
serde_json = "1.0.149"
thiserror = { version = "2.0.18", default-features = false }
time = { version = "0.3.47", features = ["formatting", "local-offset"] }
tokio = { version = "1.50.0", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.18", default-features = false }
