[package]
name = "sdk"
edition = "2024"

[dependencies]
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "parsing", "serde"] }
tokio-stream = { version = "0.1", default-features = false }
