[package]
name = "sdk"
edition = "2024"

[dependencies]
async-stream = "0.3"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "2.0", default-features = false }
time = { version = "0.3", default-features = false, features = [
  "macros",
  "parsing"
] }
tokio-stream = { version = "0.1", default-features = false }
