[package]
name = "sdk"
edition = "2024"
rust-version = "1.88"

[dependencies]
async-stream = "0.3.6"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = { version = "2.0.18", default-features = false }
time = { version = "0.3.47", default-features = false, features = [
  "macros",
  "parsing"
] }
tokio-stream = { version = "0.1.18", default-features = false }
